hockeypuck (0.8~a1) precise; urgency=low

  [ Casey Marshall ]
  * Opening 0.8 milestone.
  * cmd/lspgp/main.go, cmd/pktdump/main.go, mgo/worker.go,
    mgo/worker_test.go, pgp.go, pgp_types.go, pq/worker.go,
    responses.go:
    - Using main go.crypto branch, my changes were merged.
      LP: #1087855

 -- Casey Marshall <casey.marshall@gazzang.com>  Sat, 15 Dec 2012 23:02:01 -0600

hockeypuck (0.7) precise; urgency=low

  [ Casey Marshall ]
  * Opening 0.7 milestone.
  * cli/cli.go, cmd/hockeypuck-mgo/main.go, mgo/pks.go, mgo/worker.go,
    pks.go, worker.go:
    - Add support for PKS forwarding. LP: #1075379
  * cli/cli.go, cmd/hockeypuck-mgo/main.go, mgo/worker.go, pks.go,
    worker.go:
    - Consolidate PKS configuration from switches.
    - Consolidate worker process (goroutine) management.
  * cli/cli.go, cmd/hockeypuck-mgo/main.go, mgo/pks.go, mgo/worker.go,
    pks.go, === removed directory cli, server.go, templates.go,
    worker.go:
  * cli/cli.go, cmd/hockeypuck-mgo/main.go, config.go, log.go,
    mgo/client.go, mgo/pks.go, mgo/worker.go, pks.go, === removed
    directory cli, server.go, templates.go, worker.go:
    - Move command line flags to associated components,
      split out config file parsing.
    - Pull up common mgo client connection, reuse in worker & pks sync.
    - Fix net/smtp usage in PKS sync, added backoff delay on SMTP errors.
      LP: #1075379
  * etc/hockeypuck/hockeypuck.conf, mgo/worker.go, pgp_types.go, pks.go:
    - Clean up commented out config example settings.
    - Store cumulative digest of key's packets, only update when changed.
      LP: #1083061
    - Only use *PksTo flag if set. Only log pks poll sleep time if there was a
      retry on SMTP error.
  * mgo/client.go:
    - Simplify ensuring indexes. Added keys.mtime.
  * cmd/hockeypuck-mgo/main.go, debian/postinst, version.go:
    - Add -version flag, setting version file from changelog in postinst.
  * hkp_types.go, mgo/client.go, mgo/pks.go, mgo/worker.go,